--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </html>
  <!-- Footer Section -->
  <footer class="footer">
-    &copy; <span id="current-year"></span> Designed by Khadem Ali. All Rights Reserved.
+    &copy; <span id="current-year"></span> 2024 Designed by Khadem Ali. All Rights Reserved.
   </footer>
 
   <script src="script.js"></script>
